# jeu-de-la-vie

./: .gitignore  CMakeLists.txt  CONCEPTION.md  CONCEPTION_8md.html  Cellule_8cpp.html  Cellule_8cpp__incl.map  Cellule_8cpp__incl.md5  Cellule_8hpp.html  Cellule_8hpp.js  Cellule_8hpp__dep__incl.map  Cellule_8hpp__dep__incl.md5  Cellule_8hpp__incl.map  Cellule_8hpp__incl.md5  Cellule_8hpp_source.html  Constantes_8hpp.html  Constantes_8hpp.js  Constantes_8hpp__dep__incl.map  Constantes_8hpp__dep__incl.md5  Constantes_8hpp_source.html  Doxyfile  EtatCellule_8cpp.html  EtatCellule_8cpp__incl.map  EtatCellule_8cpp__incl.md5  EtatCellule_8hpp.html  EtatCellule_8hpp__dep__incl.map  EtatCellule_8hpp__dep__incl.md5  EtatCellule_8hpp__incl.map  EtatCellule_8hpp__incl.md5  EtatCellule_8hpp_source.html  GestionnaireFichier_8cpp.html  GestionnaireFichier_8cpp__incl.map  GestionnaireFichier_8cpp__incl.md5  GestionnaireFichier_8cpp_source.html  GestionnaireFichier_8hpp.html  GestionnaireFichier_8hpp__dep__incl.map  GestionnaireFichier_8hpp__dep__incl.md5  GestionnaireFichier_8hpp__incl.map  GestionnaireFichier_8hpp__incl.md5  GestionnaireFichier_8hpp_source.html  Grille_8cpp.html  (+542 more)
.github/workflows/: build-and-test.yml  coverage.yml  documentation.yml
docs/: index.html
docs/html/: CONCEPTION_8md.html  Cellule_8cpp.html  Cellule_8cpp__incl.map  Cellule_8cpp__incl.md5  Cellule_8cpp_source.html  Cellule_8hpp.html  Cellule_8hpp__dep__incl.map  Cellule_8hpp__dep__incl.md5  Cellule_8hpp__incl.map  Cellule_8hpp__incl.md5  Cellule_8hpp_source.html  Constantes_8hpp.html  Constantes_8hpp__dep__incl.map  Constantes_8hpp__dep__incl.md5  Constantes_8hpp_source.html  EtatCellule_8cpp.html  EtatCellule_8cpp__incl.map  EtatCellule_8cpp__incl.md5  EtatCellule_8cpp_source.html  EtatCellule_8hpp.html  EtatCellule_8hpp.js  EtatCellule_8hpp__dep__incl.map  EtatCellule_8hpp__dep__incl.md5  EtatCellule_8hpp__incl.map  EtatCellule_8hpp__incl.md5  EtatCellule_8hpp_source.html  GestionnaireFichier_8cpp.html  GestionnaireFichier_8cpp__incl.map  GestionnaireFichier_8cpp__incl.md5  GestionnaireFichier_8hpp.html  GestionnaireFichier_8hpp.js  GestionnaireFichier_8hpp__dep__incl.map  GestionnaireFichier_8hpp__dep__incl.md5  GestionnaireFichier_8hpp__incl.map  GestionnaireFichier_8hpp__incl.md5  GestionnaireFichier_8hpp_source.html  Grille_8cpp.html  Grille_8cpp__incl.map  Grille_8cpp__incl.md5  Grille_8hpp.html  (+459 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_7.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  (+32 more)
exemples/: enorme_grille_1000x1000.txt  exemple2_clignotant.txt  exemple3_complexe.txt  exemple4_avec_obstacles.txt  exemple5_grande_grille.txt  exemple6_obstacles_vivants.txt  grande_grille_500x500.txt
include/: Cellule.hpp  Constantes.hpp  EtatCellule.hpp  GestionnaireFichier.hpp  Grille.hpp  InterfaceQt.hpp  InterfaceSFML.hpp  JeuDeLaVie.hpp  ModeConsole.hpp  RegleJeu.hpp  TestsUnitaires.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  (+52 more)
src/: Cellule.cpp  EtatCellule.cpp  GestionnaireFichier.cpp  Grille.cpp  InterfaceQt.cpp  InterfaceSFML.cpp  JeuDeLaVie.cpp  ModeConsole.cpp  RegleJeu.cpp  TestsUnitaires.cpp  main.cpp  test_main.cpp
